--- a/travel-buddy/src/styles/HomePage.css
+++ b/travel-buddy/src/styles/HomePage.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x:visible;
+}
+
 #container {
     width: 100vw;
     background-color: #ECF7FF;
@@ -5,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-}
+}   
 
 #feed-container {
     width: 100vw;
